--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,15 @@ section h3 {
 }
 
 .tutorial-text h4 {
-  margin-top: 0rem;
+  margin-top: 1rem;
+  margin-bottom: 0rem;
+
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+}
+
+.tutorial-text h5 {
+  margin-top: 1rem;
   margin-bottom: 0rem;
 
   padding-top: 0rem;
