added linux endpoint tutorial video

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,11 @@ img {
   box-shadow: var(--box-shadow);
 }
 
+video {
+  width: 100%;
+  height: auto;
+}
+
 /* ================================
    Header & Navigation
    ================================ */
